# simple-humanoid-rbprm

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  pyproject.toml
data/: package.xml
data/meshes/: robot_trunk_view.dae
data/urdf/: simple_humanoid_lleg_rom.urdf  simple_humanoid_rleg_rom.urdf  simple_humanoid_trunk.urdf
simpleHumanoid_rbprm/: simpleHumanoid_abstract.py
simple_humanoid_rbprm/: simple_humanoid_abstract.py
