[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel[build]"
]

[project]
description = "Database for simple-humanoid robot using hpp-rbprm"
license = "BSD-2-Clause"
name = "simple-humanoid-rbprm"
version = "5.0.0"

[tool.cmeel]
has-binaries = false

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
